--- a/ci/common/codefresh-spec.yaml
+++ b/ci/common/codefresh-spec.yaml
@@ -24,7 +24,7 @@ spec:
       type: build
       working_directory: ${{Clone}}
       arguments:
-        image_name: ${{CF_REPO_OWNER}}
+        image_name: ${{CF_REPO_NAME}}
         tag: ${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
       stage: build
     ExtractPullRequest:
