updating if check to directory

--- a/codefresh-spec.yaml
+++ b/codefresh-spec.yaml
@@ -47,7 +47,7 @@ spec:
           for i in $(awk '!seen[$0]++' directories.txt); do
             if [[ $i == "codefresh-spec.yaml" ]]; then
               codefresh create pipeline -f codefresh-spec.yaml || codefresh replace -f codefresh-spec.yaml
-            elif [[ -f $i/projects ]]; then 
+            elif [[ -d $i/projects ]]; then 
               SPEC=$i/codefresh-spec.yaml TRIGGERS=$i/projects /merge.sh
             else
               codefresh create pipeline -f $i/codefresh-spec.yaml || codefresh replace -f $i/codefresh-spec.yaml
