adding project to argo pipeline run on common ci

--- a/ci/common/codefresh-spec.yaml
+++ b/ci/common/codefresh-spec.yaml
@@ -82,7 +82,7 @@ spec:
       stage: sync
       type: codefresh-run
       arguments:
-        PIPELINE_ID: argo-sync
+        PIPELINE_ID: cd/argo-sync
         VARIABLE:
           - APP_NAME=${{CF_REPO_NAME}}
         DETACH: true
